[tool.poetry]
name = "salesman-genetic-problem"
version = "0.1.0"
description = "Solving salesman problem using genetic algorithms"
authors = ["vkomodey <vkomodey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.6"
numpy = "^1.22.3"
matplotlib = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
